--- a/Gates/Hadamard.ipynb
+++ b/Gates/Hadamard.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit,transpile\n",
     "from qiskit_aer import AerSimulator\n",
-    "from qiskit.visualization import plot_histogram\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -105,9 +104,6 @@
     "\n",
     "qc.measure(0, 0)\n",
     "\n",
-    "\n",
-    "qc.measure_all(0,0)\n",
-    "\n",
     "simulator = AerSimulator()\n",
     "compiled_circuit = transpile(qc, simulator)\n",
     "job = simulator.run(compiled_circuit)\n",
@@ -157,12 +153,72 @@
     "     |\\Phi^+\\rangle = \\frac{1}{\\sqrt{2}}(|00\\rangle + |11\\rangle)\n",
     "     $$\n",
     "\n",
+    "   #### Solution:\n",
+    "   To create the Bell state, follow these steps:\n",
+    "   - Apply a **Hadamard** gate to the first qubit.\n",
+    "   - Apply a **CNOT** gate with the first qubit as the control and the second qubit as the target.\n",
+    "   \n",
+    "   The quantum circuit is as follows:\n",
+    "   - Start with two qubits in the \\( \\ket{00} \\) state.\n",
+    "   - Apply the Hadamard gate to the first qubit:\n",
+    "     $$\n",
+    "     H \\ket{0} = \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}).\n",
+    "     $$\n",
+    "   - Then apply the CNOT gate:\n",
+    "     $$\n",
+    "     \\text{CNOT} \\left( \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}) \\right) \\ket{0} = \\frac{1}{\\sqrt{2}} (\\ket{00} + \\ket{11}).\n",
+    "     $$\n",
+    "\n",
+    "   Therefore, the resulting state is:\n",
+    "   $$\n",
+    "   |\\Phi^+\\rangle = \\frac{1}{\\sqrt{2}}(|00\\rangle + |11\\rangle)\n",
+    "   $$\n",
+    "\n",
     "2. **Verify Double Hadamard Application**:\n",
     "   - Show that applying two consecutive Hadamard gates to a qubit returns it to its original state. Mathematically, this is represented as:\n",
     "     $$\n",
     "     H \\cdot H = I\n",
     "     $$\n",
-    "   - Design a quantum circuit to validate this property and observe the results through measurement.\n"
+    "\n",
+    "   #### Solution:\n",
+    "   The Hadamard gate acts on the computational basis states as follows:\n",
+    "    $$  H \\ket{0} = \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}) $$\n",
+    "    $$  H \\ket{1} = \\frac{1}{\\sqrt{2}} (\\ket{0} - \\ket{1}) $$\n",
+    "\n",
+    "   Now, applying two Hadamard gates:\n",
+    "   - First apply \\( H \\) to \\( \\ket{0} \\):\n",
+    "     $$\n",
+    "     H \\ket{0} = \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}).\n",
+    "     $$\n",
+    "   - Apply the second Hadamard gate:\n",
+    "     $$\n",
+    "     H \\left( \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}) \\right) = \\frac{1}{\\sqrt{2}} \\left( \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}) + \\frac{1}{\\sqrt{2}} (\\ket{0} - \\ket{1}) \\right)\n",
+    "     $$\n",
+    "     Simplifying:\n",
+    "     $$\n",
+    "     H \\cdot H \\ket{0} = \\ket{0}.\n",
+    "     $$\n",
+    "\n",
+    "   Similarly, applying the Hadamard gate twice on 1 returns 1:\n",
+    "   - Apply \\( H \\) to 1\n",
+    "     $$\n",
+    "     H \\ket{1} = \\frac{1}{\\sqrt{2}} (\\ket{0} - \\ket{1}).\n",
+    "     $$\n",
+    "   - Apply the second Hadamard gate:\n",
+    "     $$\n",
+    "     H \\left( \\frac{1}{\\sqrt{2}} (\\ket{0} - \\ket{1}) \\right) = \\frac{1}{\\sqrt{2}} \\left( \\frac{1}{\\sqrt{2}} (\\ket{0} + \\ket{1}) - \\frac{1}{\\sqrt{2}} (\\ket{0} - \\ket{1}) \\right)\n",
+    "     $$\n",
+    "     Simplifying:\n",
+    "     $$\n",
+    "     H \\cdot H \\ket{1} = \\ket{1}.\n",
+    "     $$\n",
+    "\n",
+    "   Thus, we can conclude that:\n",
+    "   $$\n",
+    "   H \\cdot H = I\n",
+    "   $$\n",
+    "\n",
+    "   This verifies that applying two Hadamard gates results in the identity operation, returning the qubit to its original state.\n"
    ]
   }
  ],
