--- a/Gates/Swap.ipynb
+++ b/Gates/Swap.ipynb
@@ -275,7 +275,60 @@
     "   SWAP \\ket{100} = \\ket{010}.\n",
     "   $$\n",
     "\n",
-    "The states of the first two qubits are exchanged.\n"
+    "The states of the first two qubits are exchanged.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CSWAP (Controlled-SWAP) Gate: Introduction and Mathematics\n",
+    "\n",
+    "## Introduction\n",
+    "The Controlled-SWAP (CSWAP) gate, also known as the Fredkin gate, is a three-qubit gate that swaps the states of two target qubits if and only if the control qubit is in the 1 state. Otherwise, it leaves the state unchanged. This gate is crucial in quantum computing for conditional operations, especially in quantum communication and algorithms requiring controlled permutations of qubits.\n",
+    "\n",
+    "### Matrix Representation\n",
+    "The CSWAP gate acts on three qubits: ket c (control qubit) and ket(t_1), ket(t_2) (target qubits). Its matrix representation is an 8x8 matrix given by:\n",
+    "\n",
+    "$$\n",
+    "\\text{CSWAP} = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 \\\\\n",
+    "\\end{bmatrix}.\n",
+    "$$\n",
+    "\n",
+    "The action of the CSWAP gate is straightforward:\n",
+    "- If c = 0, ket(t_1) and ket(t_2) remain unchanged.\n",
+    "- If c = 1, ket(t_1) and ket(t_2) are swapped.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Action on Basis States\n",
+    "Given an input state $$ \\ket{c} \\otimes \\ket{t_1} \\otimes \\ket{t_2} $$, the CSWAP gate transforms the state as follows:\n",
+    "- For c = 0:\n",
+    "  $$\n",
+    "  \\text{CSWAP}(\\ket{0} \\ket{t_1} \\ket{t_2}) = \\ket{0} \\ket{t_1} \\ket{t_2}.\n",
+    "  $$\n",
+    "- For c = 1:\n",
+    "  $$\n",
+    "  \\text{CSWAP}(\\ket{1} \\ket{t_1} \\ket{t_2}) = \\ket{1} \\ket{t_2} \\ket{t_1}.\n",
+    "  $$\n",
+    "\n",
+    "### Properties\n",
+    "1. **Reversible**: The CSWAP gate is a reversible gate, preserving quantum information.\n",
+    "2. **Controlled Operation**: Its operation is conditioned on the state of the control qubit.\n",
+    "3. **Universal Gate**: It can be used to construct more complex quantum circuits.\n",
+    "\n",
+    "The CSWAP gate can be expressed as a series of basic quantum gates, such as Toffoli gates and CNOT gates, making it implementable on existing quantum hardware.\n"
    ]
   }
  ],
