--- a/Qubits and statevector/StateVector.ipynb
+++ b/Qubits and statevector/StateVector.ipynb
@@ -33,15 +33,15 @@
     "  $$\n",
     "\n",
     "For example:\n",
-    "- If $$ |\\psi\\rangle = \\frac{1}{\\sqrt{2}}|0\\rangle + \\frac{1}{\\sqrt{2}}|1\\rangle $$, the probabilities of 0 and 1 are equal (\\( 50\\% \\) each).\n",
-    "- If $$ |\\psi\\rangle = |0\\rangle , \\text{the state is fully in} |0\\rangle $$ with \\( 100\\% \\) probability.\n",
+    "- If $ |\\psi\\rangle = \\frac{1}{\\sqrt{2}}|0\\rangle + \\frac{1}{\\sqrt{2}}|1\\rangle $, the probabilities of 0 and 1 are equal (\\( 50\\% \\) each).\n",
+    "- If $ |\\psi\\rangle = |0\\rangle$ ,the state is fully in $|0\\rangle $ with \\( 100\\% \\) probability.\n",
     "\n",
     "---\n",
     "\n",
     "## Representation Using Dirac Notation\n",
     "In **Dirac notation**, quantum states are written as Ψ (called a **ket**) and are elements of a complex vector space. The dual of Ψ is Ψ called a **bra**), which represents the conjugate transpose of the state vector.\n",
     "\n",
-    "For a state $$ |\\psi\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle $$, the dual is:\n",
+    "For a state $ |\\psi\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle $, the dual is:\n",
     "$$\n",
     "\\langle\\psi| = \\alpha^* \\langle 0| + \\beta^* \\langle 1|,\n",
     "$$\n",
@@ -63,9 +63,9 @@
     "|\\psi\\rangle = \\cos\\left(\\frac{\\theta}{2}\\right)|0\\rangle + e^{i\\phi}\\sin\\left(\\frac{\\theta}{2}\\right)|1\\rangle,\n",
     "$$\n",
     "where: \n",
-    " $$ \\theta \\text{ (polar angle) and } \\phi \\text{ (azimuthal angle) define the position of the state on the Bloch sphere.}$$ \n",
-    " $$ \\cos^2\\left(\\frac{\\theta}{2}\\right) \\text{is the probability of measuring} |0\\rangle$$\n",
-    " $$ \\sin^2\\left(\\frac{\\theta}{2}\\right) \\text{is the probability of measuring} |1\\rangle$$\n",
+    " - $ \\theta $ (polar angle) and $ \\phi $ (azimuthal angle) define the position of the state on the Bloch sphere. \n",
+    " - $ \\cos^2\\left(\\frac{\\theta}{2}\\right)$ is the probability of measuring $|0\\rangle$\n",
+    " - $ \\sin^2\\left(\\frac{\\theta}{2}\\right)$ is the probability of measuring $|1\\rangle$$\n",
     "\n",
     "### Bloch Sphere Features\n",
     "- The north pole θ = 0 represents 0.\n",
